adds a new api: edit user for self edit of profile changes
