# api/controllers/routes.go
@@ -30,6 +30,7 @@ func (s *Server) initializeRoutes() {
 
 	// Users routes
 	s.Router.HandleFunc("/user/me", middleware.SetMiddlewareJSON(middleware.SetMiddlewareAuthentication(s.GetLoggedInUser))).Methods("GET")
+	s.Router.HandleFunc("/user/edit/{id}", middleware.SetMiddlewareJSON(middleware.SetMiddlewareAuthentication(s.EditUser))).Methods("PUT")
 	s.Router.HandleFunc("/users", middleware.SetMiddlewareJSON(middleware.SetMiddlewareAuthentication(s.CreateUser))).Methods("POST")
 	s.Router.HandleFunc("/users", middleware.SetMiddlewareJSON(middleware.SetMiddlewareAuthentication(s.GetUsers))).Methods("GET")
 	s.Router.HandleFunc("/users/{id}", middleware.SetMiddlewareJSON(middleware.SetMiddlewareAuthentication(s.GetUser))).Methods("GET")
